--- a/Index.html
+++ b/Index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>CV Mariana García</title>
+    <title>Franco Martinez</title>
 
 </head>
 <body>
-    <h1 class="titulos">Mariana García</h1>
+    <h1 class="titulos">Franco Martinez</h1>
     <p>Me apasionan temas como son: los negocios en Internet, la analítica web, la optimización web (A/B Testing, UX,...), el SEO, los móviles y el SoLoMo, el emprendimiento y las startups, las redes sociales aplicadas a los negocios, las tecnologías web, etc.</p>
     <hr>
     <ul>
@@ -88,7 +88,7 @@
     <h2 class="titulos" id="social">Perfiles sociales</h2>
     <p>También puedes encontrarme en: </p>
     <ul>
-        <li><a href=" ">MarianaGarcia</a></li>
+        <li><a href=" ">FrancoMartinez</a></li>
         <li><a href="https://github.com/">Github</a></li>
         <li><a href="https://twitter.com/">Twitter</a></li>
         <li><a href="https://linkedin.com/">Linkedin</a></li>
