update html css

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="imagen/x-icon" href="https://github.githubassets.com/favicons/favicon-dark.png">
     <title>Franco Martinez</title>
-
 </head>
 <body>
     <h1 class="titulos">Franco Martinez</h1>
-    <p>Me apasionan temas como son: los negocios en Internet, la analítica web, la optimización web (A/B Testing, UX,...), el SEO, los móviles y el SoLoMo, el emprendimiento y las startups, las redes sociales aplicadas a los negocios, las tecnologías web, etc.</p>
+    <p>Me apasionan temas como son: los negocios en Internet, la analítica web, diseño UX/UI, las tecnologías web, la automatización, la analítica aplicada a la contabilidad, etc.</p>
     <hr>
     <ul>
         <li><a href="#experiencia">Experiencia profesional</a></li>
@@ -29,41 +29,27 @@
             </tr>
         </thead>
         <tr>
-            <td>Esri Argentina</td>
-            <td>Encabezando el equipo de desarrolladores</td>
-            <td>Buenos Aires (Argentina)</td>
-            <td>Marzo 2014 - Actualidad</td>
-        </tr>
-        <tr>
-            <td>Upplication</td>
-            <td>Programadora Front-End</td>
+            <td>Cazaban Ltda</td>
+            <td>Cajero</td>
             <td>Montevideo</td>
-            <td>Noviembre 2013 - Marzo 2015</td>
+            <td>Noviembre 2014 - Febrero 2018   </td>
         </tr>
         <tr>
-            <td>Universidad de la República - Ingeniería</td>
-            <td>Profesora de Programación 1</td>
+            <td>Bergara, Martinez y asociados</td>
+            <td>Auxiliar contable</td>
             <td>Montevideo</td>
-            <td>Noviembre 2013 - Marzo 2015</td>
-        </tr>
-        <tr>
-            <td>Google Developers Group</td>
-            <td>Coordinadora nacional</td>
-            <td>Buenos Aires (Argentina)</td>
-            <td>Septiembre 2012 - Enero 2013</td>
+            <td>Febrero 2018 - Actualidad</td>
         </tr>
     </table>
     <hr>
     <img src="https://mattfarley.ca/img/hero-devices.svg" alt="imagen">
     <h2 class="titulos" id="habilidades">Habilidades y conocimientos</h2>
     <ul>
-        <li><strong>Desarrollo web:</strong>Desarrollo web: HTML5, CSS3, JavaScript, Python+Django, LESS & SASS, PHP, SEO, Node.js, MySQL, AngularJS, JQuery, Bootstrap, Dojo, responsive desing, WordPress, usabilidad, CoffeScript, ect.</li>
-        <li><strong>Analitíca web/Métricas:</strong> Google Analytics, Mixpanel, segment.io, etc.</li>
-        <li><strong>Gestión:</strong> SCRUM, gestion de comunidades y organización de eventos, gestión de equipos, etc. </li>
-        <li><strong>Emprendimiento:</strong> startups, Lean Startup, etc.</li>
-        <li><strong>Aplicaiones móviles:</strong> Phonegap.</li>
-        <li><strong>Marketing:</strong> email margeting, redes sociales, gamificación nurture marketing, lead scoring, etc.</li>
-        <li><strong>Sistemas de información feográfica (GIS):</strong> ArcGIS APIs.</li>
+        <li><strong>Desarrollo web:</strong>Desarrollo web: HTML5, CSS3, JavaScript, Python.</li>
+        <li><strong>Idiomas:</strong> Ingles.</li>
+        <li><strong>Diseño gráfico:</strong> Adobe Photoshop, Corel Draw. </li>
+        <li><strong>Emprendimiento:</strong> Servicios contables.</li>
+        <li><strong>Gestoría:</strong> BPS, DGI, tercerizaciones, etc.</li>
     </ul>
     <hr>
     <h2 class="titulos" id="educacion">Educación</h2>
@@ -74,22 +60,27 @@
             <th>Promoción</th>
         </thead>
         <tr class="tdcentro">
-            <td>Desarrollo Web</td>
-            <td>Plan Ceibal</td>
-            <td>2019</td>
+            <td>Inglés FCE</td>
+            <td>Dickens</td>
+            <td>2010</td>
         </tr>
         <tr class="tdcentro">
-            <td>Curso: creación de empresas</td>
-            <td>Escuela de Negocios</td>
-            <td>2009</td>
+            <td>Introducción a la programación</td>
+            <td>JaP</td>
+            <td>2023</td>
+        </tr>
+        <tr class="tdcentro">
+            <td>Desarrolo web</td>
+            <td>JaP</td>
+            <td>2023</td>
         </tr>
     </table>
     <hr>
     <h2 class="titulos" id="social">Perfiles sociales</h2>
     <p>También puedes encontrarme en: </p>
     <ul>
-        <li><a href=" ">FrancoMartinez</a></li>
-        <li><a href="https://github.com/">Github</a></li>
+        <li><a href="https://instagram.com/fraanco.maartinez">Instagram</a></li>
+        <li><a href="https://fraan94.github.io/">Github</a></li>
         <li><a href="https://twitter.com/">Twitter</a></li>
         <li><a href="https://linkedin.com/">Linkedin</a></li>
     </ul>
@@ -97,10 +88,10 @@
     <h1 class="titulos" id="contacto">Contactar</h1>
     <form>
         <label for="para">Para: </label>
-        <input class="inputs" id="para" type="text">
+        <input class="inputs" id="para" type="text" required>
         <br>
         <label for="tematica">Temática: </label>
-        <select class="inputs" id="tematica">
+        <select class="inputs" id="tematica" required>
            <option>-- Elige un tema --</option>
            <option>Consulta</option>
            <option>Propuesta</option>
@@ -109,10 +100,10 @@
         </select>
         <br>
         <label for="asunto">Asunto: </label>
-        <input class="inputs" id="asunto" type="text">
+        <input class="inputs" id="asunto" type="text" required>
         <br>
         <label for="cuerpo">Cuerpo: </label>
-        <textarea class="inputs" id="cuerpo" name="cuerpo"></textarea>
+        <textarea class="inputs" id="cuerpo" name="cuerpo" required></textarea>
         <br>
         <br>
         <input class="inputs" id="enviar" type="submit" value="Enviar">
