--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <li><a href="#contacto">Contactar</a></li>
     </ul>
     <h2 class="titulos" id="experiencia">Experiencia profesional</h2>
-    <table id="tabla1">
+    <table>
         <thead>
             <tr>
                 <th>Empresa/Organización</th>
